# ttnn-visualizer-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-review-specialist.md
.claude/plans/: features-plan.md
docs/: commands.md  tui.md
src/ttnn_vis_cli/: __init__.py  cli.py
src/ttnn_vis_cli/commands/: __init__.py  analysis.py  devices.py  dtype_analysis.py  host_overhead.py  info.py  l1.py  memory.py  multi_cq.py  operations.py  perf.py  sharding.py  tensors.py
src/ttnn_vis_cli/data/: __init__.py  dtype_analysis.py  host_overhead_analysis.py  models.py  multi_cq_analysis.py  perf_analysis.py  perf_csv.py  profiler_db.py  sharding_analysis.py
src/ttnn_vis_cli/output/: __init__.py  formatter.py  memory_map.py
src/ttnn_vis_cli/tui/: __init__.py  app.py  utils.py
src/ttnn_vis_cli/tui/screens/: __init__.py  dashboard.py  operations.py  performance.py  tensors.py
src/ttnn_vis_cli/tui/styles/: app.tcss
src/ttnn_vis_cli/tui/widgets/: __init__.py  memory_bar.py  summary_panel.py
tests/: conftest.py  test_cli.py  test_dtype_analysis.py  test_formatter.py  test_host_overhead_analysis.py  test_models.py  test_multi_cq_analysis.py  test_perf_csv.py  test_profiler_db.py  test_sharding_analysis.py
