[project]
name = "ttnn-vis-cli"
version = "0.1.0"
description = "CLI tool for TTNN profiling visualization and analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "TTNN CLI Team" }
]
dependencies = [
    "click>=8.0",
    "pandas>=2.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
perf = [
    "tt-perf-report",
]
npe = [
    "zstandard",
]

[project.scripts]
ttnn-vis-cli = "ttnn_vis_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttnn_vis_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

